fix(trace): 修复链路追踪日志中trace.id缺失
